<resources>
    <string name="app_name">Scan Tardies</string>
    <string name="title_activity_successful">SuccessfulActivity</string>
    <string name="backBttnText">Back</string>
    <string name="student_informationText">Student Information:</string>
    <string name="nameText">Name</string>
    <string name="sectionText">Section</string>
    <string name="insertingDataText">End of record.</string>
    <string name="LRNText">LRN</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_icon_text">About</string>
    <string name="profile_icon_text">profile icon</string>
    <string name="welcome_text">Welcome</string>
</resources>